syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.xiaolanhe";
option java_outer_classname = "TestProto";

message TestRequest{
  string name = 1;
}

message TestResponse{
  string result = 1;
}

service TestService{
  rpc testSuns(TestRequest) returns(TestResponse);
}